--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <!-- BudgetList(main) fragment -->
     <string name="budget_list_loading_error">There was a problem loading your list!</string>
+    <string name="user_help_frame_no_list_found">No planned budgets :)</string>
 
     <!-- new budgetlist fragment -->
     <string name="new_budget_list_toolbar_name">Add new list</string>
