-fixed various navigation bugs -added multi select to expenses aswel as deleting selected items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="user_greetings">Greetings </string>
     <string name="closest_list_to_date">Close to due: </string>
     <string name="closest_list_to_date_value">Money left till due date: </string>
+    <string name="budget_list_details_delete_button">delete expenses</string>
 
 
 </resources>
