-implemented editing budget lists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="budget_list_loading_error">There was a problem loading your list!</string>
     <string name="user_help_frame_no_list_found">No planned budgets :)</string>
 
-    <!-- new budgetlist fragment -->
+    <!-- new/edit budgetlist fragment -->
     <string name="new_budget_list_toolbar_name">Add new list</string>
     <string name="new_budget_list_name_prompt">List name:</string>
     <string name="new_budget_list_name_hint">Enter name of your new list here</string>
@@ -32,6 +32,7 @@
     <string name="new_budget_list_due_date_prompt">Due date:</string>
     <string name="new_budget_list_cancel_button">Cancel</string>
     <string name="new_budget_list_confirm_button">Add list</string>
+    <string name="edit_budget_list_confirm_button">Edit list</string>
 
 
     <!-- Navigation drawer -->
@@ -57,9 +58,11 @@
     <!--Budget List Fragment Details Text-->
     <string name="user_greetings">Greetings </string>
     <string name="closest_list_to_date">Close to due: </string>
-    <string name="closest_list_to_date_value">Money left till due date: </string>
+    <string name="closest_list_to_date_value_remaining">Money left till due date: </string>
+    <string name="closest_list_to_date_value_total">From total of: </string>
     <string name="budget_list_details_delete_button">delete expenses</string>
     <string name="edit_budget_list">Edit</string>
+
 
 
 </resources>
