--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,13 @@
     <!-- Login activity -->
     <string name="login_prompt">Enter your e-mail address</string>
     <string name="password_prompt">Enter your password</string>
-    <string name="password_confirmation_prompt">Confirm your passowrd</string>
+    <string name="password_confirmation_prompt">Confirm your password</string>
     <string name="login_action">Log in!</string>
     <string name="register_action">Register new account!</string>
     <string name="confirm_registration_action">Confirm your registration</string>
     <string name="cancel_registration_action">Cancel registration</string>
     <string name="register_bad_password">Password must contain at least: 1 lower case character, 1 upper case character, 1 number, 1 special character min 6</string>
-    <string name="register_passwords_doesnt_match">Passwords do not match</string>
+    <string name="register_passwords_does_not_match">Passwords do not match</string>
     <string name="register_email_not_valid">Bad email address</string>
     <string name="login_credentials_error">Entered email address or password are incorrect!</string>
     <string name="login_account_manager_already_exists">There is already an account saved in app. Remove previous account first.</string>
@@ -22,7 +22,7 @@
     <string name="user_help_frame_no_list_found">No planned budgets :)</string>
     <string name="budget_list_delete_button">delete selected lists</string>
 
-    <!-- new/edit budgetlist fragment -->
+    <!-- new/edit budget list fragment -->
     <string name="new_budget_list_toolbar_name">Add new list</string>
     <string name="new_budget_list_name_prompt">List name:</string>
     <string name="new_budget_list_name_hint">Enter name of your new list here</string>
@@ -34,19 +34,26 @@
     <string name="new_budget_list_cancel_button">Cancel</string>
     <string name="new_budget_list_confirm_button">Add list</string>
     <string name="edit_budget_list_confirm_button">Edit list</string>
+    <string name="edit_budget_list_toolbar_name">Edit your budget list</string>
 
+    <!-- share budget list fragment -->
+    <string name="share_budget_list_toolbar_name">Share your budget list with friends</string>
+    <string name="share_budget_list_search_button">Search</string>
+    <string name="share_budget_list_share_button">Share</string>
+    <string name="share_budget_list_search_hint">Search your friend list</string>
 
     <!-- Navigation drawer -->
-    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
-    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
-    <string name="contact_email">maciej.lipinski@student.wat.edu.pl</string>
-    <string name="menu_prompt">Menu:</string>
-    <string name="loading_error">Something went wrong!</string>
-    <string name="logged_in_as">Currently logged in as:</string>
+    <string name="drawer_navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="drawer_navigation_drawer_close" translatable="false">Close navigation drawer</string>
+    <string name="drawer_contact_email">maciej.lipinski@student.wat.edu.pl</string>
+    <string name="drawer_menu_prompt">Menu:</string>
+    <string name="drawer_loading_error">Something went wrong!</string>
+    <string name="drawer_logged_in_as">Currently logged in as:</string>
+    <string name="drawer_logout">logout</string>
+    <string name="drawer_settings">settings</string>
+    <string name="drawer_friends">friends</string>
 
-    <!-- Settings strings -->
-    <string name="logout">logout</string>
-    <string name="settings">settings</string>
+    <!-- Settings fragment -->
     <string name="dark_mode">Dark mode</string>
     <string name="title_activity_settings">Settings</string>
 
@@ -63,7 +70,22 @@
     <string name="closest_list_to_date_value_total">From total of: </string>
     <string name="budget_list_details_delete_button">delete selected expenses</string>
     <string name="edit_budget_list">Edit</string>
+    <string name="edit_budget_users">users</string>
+
+    <!-- Friends fragment -->
+    <string name="friend_list_loading_error">There was a problem loading your friend list!</string>
+    <string name="friend_list_unfriend_button">Unfriend</string>
+    <string name="friend_list_decline_button">Decline</string>
+    <string name="friend_list_confirm_button">Confirm</string>
+    <string name="friend_waiting_confirmation_text">Awaiting confirmation:</string>
+    <string name="friend_search_hint">Search your friend list</string>
+    <string name="friend_fragment_title">Your friends</string>
+    <string name="friend_decline">Decline</string>
+    <string name="friend_accept">Accept</string>
 
 
+    <!-- placeholders and testing -->
+    <string name="dummy_button">[PH]button</string>
+    <string name="dummy_content">[PH]content</string>
 
 </resources>
