-added first iteration of icons to category spinner(all icons are same icon at the moment as works are in progress -added and completed add category fragment visible only to admins in drawer menu -added but not yet implemented edit/delete categories fragment visible only to admins in drawer menu -changed category entity categoryImage field type from char[] to String, insted of holding image in char array form it now holds it in base64 string

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -90,4 +90,13 @@
     <string name="language_preference_title">Język</string>
     <string name="new_budget_list_starting_date_prompt">Termin początkowy:</string>
     <string name="new_budget_list_date_error">Lista nie może kończyć się zanim się zacznie!</string>
+    <string name="drawer_admin_add_category">Dodaj kategorię</string>
+    <string name="drawer_admin_edit_category">Edytuj kategorię</string>
+    <string name="category_add_button">Dodaj</string>
+    <string name="category_edit_button">Edytuj</string>
+    <string name="category_cancel_button">Anuluj</string>
+    <string name="category_name_prompt">Nazwa kategorii:</string>
+    <string name="category_name_hint">Wprowadź nazwę</string>
+    <string name="category_icon_prompt">Wybierz icony kategorii:</string>
+    <string name="category_new_added_toast_text">Dodano nową kategorię</string>
 </resources>
