--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
     <string name="drawer_logout">Logout</string>
     <string name="drawer_settings">Settings</string>
     <string name="drawer_friends">Friends</string>
+    <string name="drawer_admin_add_category">Add category</string>
+    <string name="drawer_admin_edit_category">Edit category</string>
 
     <!-- Settings fragment -->
     <string name="dark_mode">Dark mode</string>
@@ -118,6 +120,15 @@
     <string name="friend_send_friend_request_error_text_view">User not found!</string>
     <string name="friend_send_friend_request_unknown_error">Unknown error occurred please try again later. If that problem persists please contant support</string>
     <string name="add_friend_menu_item">Add friend</string>
+
+    <!-- new/edit categories (admin) -->
+    <string name="category_add_button">Add</string>
+    <string name="category_edit_button">Edit</string>
+    <string name="category_cancel_button">Cancel</string>
+    <string name="category_name_prompt">Category name:</string>
+    <string name="category_name_hint">Enter category name here</string>
+    <string name="category_icon_prompt">Choose category icon:</string>
+    <string name="category_new_added_toast_text">New Category added</string>
 
 
     <!-- placeholders and testing -->
